Fix font bug. Make start game button smaller

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,4 @@
-<style>
 @import url('https://fonts.googleapis.com/css2?family=Recursive&display=swap');
-</style>
 
 --root {
   --english-violet: #39304A;
@@ -22,6 +20,7 @@ html {
 }
 
 body {
+  width: 100%;
   background: #39304A;
   font-family: 'Recursive', sans-serif;
   font-weight: bold;
@@ -117,8 +116,8 @@ li  {
 }
 
 .home-play {
-  width: 300px;
-  height: 150px;
+  width: 200px;
+  height: 100px;
   margin: 25px 10px 25px 10px;
   padding: 10px;
   border:solid 7.5px hsla(261, 21%, 24%, 1);
@@ -126,8 +125,17 @@ li  {
   box-shadow:5px 5px 50px #39304a, -5px -5px 50px rgb(255 240 228);
   font-weight: bold;
   text-transform: uppercase;
-  font-size: 32px;
+  font-size: 24px;
   color: #39304a;
+}
+
+.home-play:hover {
+  box-shadow:15px 15px 50px #39304a, -15px -15px 50px rgb(255 240 228);
+}
+
+.home-play:active {
+  -webkit-animation: wiggle .25s;
+          animation: wiggle .25s;
 }
 
 #rules ul {
